--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs": "0.0.1-security",
+    "htmlparser2": "^3.9.2",
     "lodash": "^4.17.4"
   }
 }
